--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ authors = [
 ]
 
 dependencies = [
-  "roboticstoolbox-python>=1.1.5",
+  "roboticstoolbox-python>=1.1.1",
   "spatialmath-python>=1.0.3",
-  "numpy>=1.23"
+  "numpy >=1.17.4,<2.0"
 ]
 
 classifiers = [
@@ -32,3 +32,9 @@ dev = ["pytest", "ruff", "build", "twine"]
 [project.urls]
 Homepage = "https://github.com/isento/pib-utils"
 Issues   = "https://github.com/isento/pib-utils/issues"
+
+[tool.setuptools]               
+package-dir = {"" = "src"}       # root of importable 
+
+[tool.setuptools.packages.find] 
+where = ["src"]                  # scan “src/” for packages
