--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ authors = [
 dependencies = [
   "roboticstoolbox-python>=1.1.1",
   "spatialmath-python>=1.0.3",
-  "numpy >=1.17.4,<2.0"
+  "numpy >=1.17.4,<2.0",
+  "roslibpy >=1.8, <2"
 ]
 
 classifiers = [
